--- a/views/admin/sidebar.ejs
+++ b/views/admin/sidebar.ejs
@@ -55,7 +55,7 @@
         <ul class="sub-menu">
           <li><a class="link_name" href="/blockchain-management">Blockchain</a></li>
           <li><a href="/blockchain-management">Blockchain Management</a></li>
-          <li><a href="/blockchain-activity-log">Activity Log</a></li>
+          <li><a href="/blockchain-activity-log">Blockchain Activity Log</a></li>
         </ul>
       </li>
       <li <%= activeTab === 'election' ? 'id="active-tab"' : '' %>>
@@ -68,10 +68,10 @@
         </div>
         <ul class="sub-menu">
           <li><a class="link_name" href="/voter-info"> electionName || "No Election Ongoing"</a></li>
-          <li><a href="/voter-info">Voter Info</a></li>
+          <li><a href="/voter-info">Voter Information</a></li>
           <li><a href="/voter-turnout">Voter Turnout</a></li>
           <li><a href="/vote-tally">Vote Tally</a></li>
-          <li><a href="/results">Results</a></li>
+          <li><a href="/results">Election Results</a></li>
           <li><a href="/reset">Reset Election</a></li>
         </ul>
       </li>
