--- a/views/admin/header.ejs
+++ b/views/admin/header.ejs
@@ -218,7 +218,7 @@ document.addEventListener("DOMContentLoaded", function() {
   warningIcon.addEventListener("click", function(e) {
     e.stopPropagation(); // Prevent the click from bubbling up
     if (dropdown.classList.contains("active")) {
-      hideDropdown();
+      hideDropdown();23
     } else {
       showDropdown();
     }
