--- a/views/admin/sidebar.ejs
+++ b/views/admin/sidebar.ejs
@@ -54,7 +54,7 @@
       <ul class="sub-menu">
         <li><a class="link_name" href="/blockchain-management">Blockchain</a></li>
         <li><a href="/blockchain-management">Blockchain Management</a></li>
-        <li><a href="/blockchain-activity-log">Activity Log</a></li>
+        <li><a href="/blockchain-activity-log">Blockchain Activity Log</a></li>
       </ul>
     </li>
     <li <% if (activeTab === 'election') { %> id="active-tab" <% } %>>
@@ -71,10 +71,10 @@
             electionName || "No Election Ongoing"
           </a>
         </li>
-        <li><a href="/voter-info">Voter Info</a></li>
+        <li><a href="/voter-info">Voter Information</a></li>
         <li><a href="/voter-turnout">Voter Turnout</a></li>
         <li><a href="/vote-tally">Vote Tally</a></li>
-        <li><a href="/results">Results</a></li>
+        <li><a href="/results">Election Results</a></li>
         <li><a href="/reset">Reset Election</a></li>
       </ul>
     </li>
