--- a/public/admin/css/configuration.css
+++ b/public/admin/css/configuration.css
@@ -11,7 +11,8 @@
   display: flex;
   flex-direction: column;
   flex-basis: 55%;
-  background-color: #b8e5ff;
+  background-color: #f8eac2;
+  border: 0.2rem solid rgba(58, 27, 5, 0.677);
   margin-right: 1.5rem;
   padding: 1.5rem;
 }
@@ -25,6 +26,7 @@
   background-color: #c0edbc;
   padding: 2%;
   border-radius: 0.5em;
+  border: 0.2rem solid rgba(58, 27, 5, 0.677);
 }
 
 .election-name {
@@ -36,6 +38,11 @@
   background-color: #b8e5ff;
   padding: 2%;
   border-radius: 0.5em;
+  border: 0.2rem solid rgba(58, 27, 5, 0.677);
+}
+
+hr {
+  border: 0.1rem solid rgba(14, 13, 13, 0.5);
 }
 
 .create-election form > * {
@@ -190,6 +197,7 @@
 
 .create-election fieldset {
   padding: 1.5em;
+  border: 0.1rem solid rgba(14, 13, 13, 0.5);
 }
 
 .create-election fieldset legend {
