sidebar needs fixing activeSub

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -22,7 +22,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'dashboard' }) %>
+      <%- include('sidebar', { activeTab: 'dashboard', activeSub: '' }) %>
       <main class="main">
         <div id="container-overlay">
           <div class="title-container">
