--- a/views/admin/election-voter-info.ejs
+++ b/views/admin/election-voter-info.ejs
@@ -23,7 +23,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'election' }) %>
+      <%- include('sidebar', { activeTab: 'election', activeSub: 'voter-info' }) %>
       <main class="main">
         <div class="title-container">
           <div class="r">
