--- a/views/admin/blockchain-management.ejs
+++ b/views/admin/blockchain-management.ejs
@@ -23,7 +23,7 @@
     <%- include('header') %>
 
     <div class="content">
-      <%- include('sidebar', { activeTab: 'blockchain' }) %>
+      <%- include('sidebar', { activeTab: 'blockchain', activeSub: 'blockchain-management' }) %>
       <main class="main">
         <div id="container-overlay">
           <div class="title-container">
